# ds_project_template

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  TODO_tasks.txt  pyproject.toml
.dvc/: config
config/: config.yaml
data/: .gitignore  final.dvc  processed.dvc  raw.dvc
src/: process.py
